# konetic-report-rag

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  app.py  build_openai_index.py  common.py  compare_embeddings.py  config.py  cspell.json  dev.bat  dev.sh  export_for_colab.py  export_npz.py  import_from_colab.py  index_pipeline.py  metering.py  nextsession.md  plan.md  pyproject.toml  qa_pipeline.py  requirements-cloud.txt  requirements.txt  structure_chunker.py  upload_pipeline.py  vector_store.py
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
backend/: main.py  requirements.txt
docs/: DESIGN.md  LOGGING.md  ONBOARDING.md  PLAN.md  REACT_FASTAPI.md  nextsession.md  plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  styles.css  types.ts
frontend/src/components/: DocPanel.tsx  DocViewer.tsx  QnA.tsx  Sidebar.tsx  SourceRail.tsx  UploadBar.tsx
frontend/src/components/qa/: Citations.tsx  ProcessDetail.tsx  QnA.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx
frontend/src/hooks/: useAnswerStream.ts
rag/: config.py  monitoring.py  preflight.py  qa_pipeline.py  services.py  upload_pipeline.py  vector_store.py
rag/indexing/: build_openai_index.py  export_npz.py  index_pipeline.py  semantic.py  structure_chunker.py
