[project]
name = "konetic-report-rag"
version = "0.1.0"
description = "코네틱 국가별/규제 보고서 RAG Q&A (OpenAI 전용)"
requires-python = ">=3.10"

# ── 런타임(앱 서빙) 의존성 — 클라우드도 이것만 필요 ──
#   임베딩/리랭크/LLM 은 OpenAI API, 검색은 numpy(memory) 또는 chromadb(아래 extra)
dependencies = [
    "streamlit>=1.36",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "PyMuPDF>=1.24",          # 업로드 PDF 런타임 파싱
]

[project.optional-dependencies]
# ── 인덱싱 시에만 필요(배포 런타임 불필요) — 구조 청킹·Chroma 적재 ──
# (임베딩 자체는 OpenAI API. 여기 deps 는 PDF 파싱/로컬 Chroma 용)
indexing = [
    "pdfplumber>=0.11",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "chromadb>=0.5",
    "kiwipiepy>=0.17",
]

[tool.uv]
# 이 저장소는 라이브러리가 아니라 앱이다 → 패키지 빌드하지 않음
package = false

[tool.ruff]
# CI(ruff check)의 린트 결과를 결정론적으로 고정 — requires-python 과 타깃 일치
target-version = "py310"
line-length = 100
